; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/efidev/extr_efirtc.c_efirtc_probe.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/efidev/extr_efirtc.c_efirtc_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efi_tm = type { i32 }

@bootverbose = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [42 x i8] c"cannot read EFI realtime clock, error %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"EFI Realtime Clock\00", align 1
@BUS_PROBE_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @efirtc_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @efirtc_probe(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.efi_tm, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = call i32 @efi_get_time(%struct.efi_tm* %4)
  store i32 %6, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %17

8:                                                ; preds = %1
  %9 = load i64, i64* @bootverbose, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %8
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @device_printf(i32 %12, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %11, %8
  %16 = load i32, i32* %5, align 4
  store i32 %16, i32* %2, align 4
  br label %21

17:                                               ; preds = %1
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @device_set_desc(i32 %18, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  %20 = load i32, i32* @BUS_PROBE_DEFAULT, align 4
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %17, %15
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @efi_get_time(%struct.efi_tm*) #1

declare dso_local i32 @device_printf(i32, i8*, i32) #1

declare dso_local i32 @device_set_desc(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
